Inicializa endpoints de analytics no sistema. Closes #5
